<resources>
    <string name="app_name">AstroWeather</string>

    <string name="current_time">Aktualny czas:</string>
    <string name="user_location">Lokalizacja użytkownika:</string>
    <string name="time">Czas</string>
    <string name="rise">Wschód</string>
    <string name="sun">Słońce</string>
    <string name="moon">Księżyc</string>
    <string name="azimuth">Azymut</string>
    <string name="set">Zachód</string>
    <string name="civil_times">Zmierz i świt cywilny</string>
    <string name="dawn">Świt</string>
    <string name="dusk">Zmierzch</string>
    <string name="new_and_full_moon">Nów i pełnia</string>
    <string name="new_moon">Nów</string>
    <string name="full_moon">Pełnia</string>
    <string name="moon_phase">Faza Księżyca</string>
    <string name="moon_age">Dzień miesiąca synodycznego</string>
    <string name="moon_month">Miesiąc synodyczny</string>
    <string name="menu_set_location">Ustaw lokalizację</string>
    <string name="update_frequency">Częstotliwość odświeżania</string>
    <string name="location_longitude">Długość geograficzna</string>
    <string name="location_latitude">Szerokość geograficzna</string>
    <string name="setUserLocation">Wpisz pozycję użytkownika</string>
    <string name="save">Zapisz</string>
    <string name="cancel">Anuluj</string>
    <string name="invalidLongitudeValue">Długość geograficzna musi zawierać się w przedziale &lt;-180,180&gt;</string>
    <string name="invalidLatitudeValue">Szerokość geograficzna musi zawierać się w przedziale &lt;0,90&gt;</string>
    <string name="invalidUpdateFrequency">Częstotliwość odświeżania musi być większa od 0</string>
    <string name="setUpdateFrequency">Podaj, co ile minut mają się odświeżać widoki</string>
    <string name="not_set">Jeszcze nie ustawiono</string>
    <string name="field_required">To pole jest wymagane</string>
    <string name="refresh_time">Aktualizacja:</string>
    <string name="field_invalid">Wpisana wartość jest niepoprawna</string>
    <string name="refresh">Odśwież</string>
    <string name="selectUnit">Wybierz jednostkę</string>
    <string name="search">Wyszukaj</string>
    <string name="menu_add_location">Dodaj lokalizację</string>
    <string name="failedToFindLocation">Podana lokalizacja nie jest poprawna</string>
    <string name="requestFailed">Błąd pobierania danych</string>
    <string name="newPlaceAdded">Dodano nową lokalizację</string>
    <string name="selectedLocation">Wybrana lokalizacja</string>
    <string name="downloading_data">Pobieranie danych</string>
    <string name="basic_data">Dane podstawowe:</string>
    <string name="wind_direction_force">Kierunek i siła wiatru</string>
    <string name="visibility">Widoczność</string>
    <string name="humidity">Wilgotność</string>
    <string name="description">Opis</string>
    <string name="pressure">Ciśnienie</string>
    <string name="temperature">Temperatura</string>
    <string name="failed_to_read_current_data">Nie udało się pobrać aktualnych danych. Wyświetlone dane mogą być nieaktualne.</string>
    <string name="weatherForecast">Prognoza pogody</string>
    <string name="current_weather">Pogoda:</string>
    <string name="no_cached_data">Brak dostępnych danych pogodowych. Sprawdź połączenie z internetem i spróbuj ponownie</string>
    <string name="location_already_added">Lokalizacja jest już na liście</string>
</resources>
