<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menuSetLocation"
        android:title="@string/menu_set_location"
        app:showAsAction="never" />

    <item
        android:id="@+id/menuAddLocation"
        android:title="@string/menu_add_location"
        app:showAsAction="never" />

    <item
        android:id="@+id/menuUpdateFrequency"
        android:title="@string/update_frequency"
        app:showAsAction="never" />

    <item
        android:id="@+id/menuRefresh"
        android:title="@string/refresh"
        app:showAsAction="never" />

    <item
        android:id="@+id/menuSwitchUnit"
        android:title="@string/selectUnit"
        app:showAsAction="never" />

</menu>